# oim-cms

./: .coveragerc  .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  manage.py  nginx.conf.example  pyproject.toml  requirements.txt  setup.cfg  uwsgi.ini.example
.github/workflows/: codeql-analysis.yml
.s2i/: environment
approvals/: admin.py  api.py  forms.py  models.py  test_views.py  urls.py  views.py
approvals/migrations/: 0001_initial.py
assets/: admin.py  api.py  import_assets.py  import_history.py  import_legacy.py  locmap.csv  models.py  test_api.py  utils.py
assets/migrations/: 0001_initial.py  0002_auto_20161019_1434.py  0003_auto_20161222_1223.py  0003_auto_20170119_1149.py  0003_auto_20170801_0919.py  0004_auto_20170804_0916.py  0004_vehicledetails.py  0005_auto_20170817_1033.py  0005_hardwareassetextra_vtd_id.py  0006_auto_20161230_1325.py  0006_auto_20170907_0940.py  0007_auto_20171012_1434.py  0007_hardwareassetextra_vehicle_id.py  0008_auto_20180119_0935.py  0009_auto_20180131_1449.py  0010_auto_20180301_1305.py  0011_auto_20180308_0948.py  0012_remove_hardwaremodel_lifecycle.py
catalogue/: admin.py  api.py  events.py  forms.py  mappings.py  models.py  pycswsettings.py  test_api.py  urls.py  views.py
catalogue/data/: epsg
catalogue/migrations/: 0001_initial.py  0002_auto_20160304_0527.py  0003_auto_20160304_0607.py  0004_auto_20160304_0608.py  0005_auto_20160315_1412.py  (+20 more)
core/: apps.py  models.py  rich_text.py  test.py  views.py  wagtail_hooks.py
forms/: api.py  test_views.py
knowledge/: test_views.py  urls.py  views.py
kustomize/: README.md
mudmap/: apps.py  models.py
oim_cms/: api.py  celery.py  context_processors.py  load_mugshots.py  middleware.py  settings.py  test_api.py  urls.py  utils.py  wsgi.py
organisation/: Groups.py  admin.py  api.py  cron.py  dbca_import_scripts.py  models.py  test_api.py  utils.py
postgrest/: apps.py
rcs_assets/: models.py  router.py
registers/: admin.py  api.py  models.py  tasks.py  test_admin.py  test_api.py  test_models.py  urls.py  utils.py  views.py
rooms/: admin.py  api.py  models.py  urls.py
tracking/: admin.py  api.py  models.py  tasks.py  test_api.py  test_models.py  utils.py  utils_aws.py  utils_freshdesk.py  utils_pdq.py  utils_salt.py
(+241 files in other folders)
