[tool.poetry]
name = "oim-cms"
version = "2.12.4"
description = "This project contains the CMS to provide the OIM Extranet site, which is based upon the Wagtail CMS."
authors = ["ASI <asi@dbca.wa.gov.au>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
Django = "2.2.20"
psycopg2-binary = "2.8.6"
dbca-utils = "1.1.1"
django-extensions = "3.0.8"
dj-database-url = "0.5.0"
gunicorn = "20.0.4"
dj-static = "0.0.6"
wagtail = "2.12.5"
django-taggit = "1.3.0"
django-modelcluster = "^5.1"
Pillow = "8.2.0"
django-dotenv = "1.4.2"

[tool.poetry.dev-dependencies]
ipython = "^7.17.0"
ipdb = "^0.13.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
