[tool.poetry]
name = "oim-cms"
version = "2.13.4"
description = "This project contains the CMS to provide the OIM Extranet site, which is based upon the Wagtail CMS."
authors = ["ASI <asi@dbca.wa.gov.au>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
Django = "2.2.23"
psycopg2-binary = "2.8.6"
dbca-utils = "1.1.1"
django-extensions = "3.0.8"
dj-database-url = "0.5.0"
gunicorn = "20.1.0"
dj-static = "0.0.6"
wagtail = "2.13.4"
django-taggit = "1.3.0"
django-modelcluster = "5.1"
Pillow = "8.3.2"
django-dotenv = "1.4.2"

[tool.poetry.dev-dependencies]
ipython = "^7.23.0"
ipdb = "^0.13.2"

[build-system]
requires = ["poetry>=1.1.6"]
build-backend = "poetry.masonry.api"
