[tool.poetry]
name = "oim-cms"
version = "2.14.2"
description = "This project contains the CMS to provide the OIM Extranet site, which is based upon the Wagtail CMS."
authors = ["ASI <asi@dbca.wa.gov.au>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2.5"
psycopg2-binary = "2.8.6"
dbca-utils = "1.1.1"
django-extensions = "3.0.8"
dj-database-url = "0.5.0"
gunicorn = "20.1.0"
Pillow = "8.4.0"
django-dotenv = "1.4.2"
django-modelcluster = "^5.2"
django-taggit = "^1.5.1"
wagtail = "2.15"
whitenoise = {version = "5.3.0", extras = ["brotli"]}

[tool.poetry.dev-dependencies]
ipython = "^7.23.0"
ipdb = "^0.13.2"

[build-system]
requires = ["poetry>=1.1.6"]
build-backend = "poetry.masonry.api"
